--- a/rewrite.qmd
+++ b/rewrite.qmd
@@ -6,11 +6,11 @@ format:
     toc-depth: 3
     fig-cap-location: top
     code-fold: true
-  elsevier-pdf:
-    keep-tex: true
-    journal:
-      name: JIMR
-      cite-style: authoryear
+  pdf: default
+    # keep-tex: true
+    # journal:
+    #   name: JIMR
+    #   cite-style: authoryear
 author:
   - name: Daniel Kapitan
     affiliations:
@@ -83,11 +83,63 @@ bibliography: pharmaccess.bib
 
 ## Introduction {#sec-introduction}
 
+### The global digital health ecosystem is still project-centric
+
 Digital transformation have the potential to make inclusive health systems in low- and middle income countries (LMICs) a reality by connecting patients and professionals, using data as a currency of trust. Adoption of digital technologies in healthcare means more than simply increasing efficiency or cutting costs. Instead, digital technologies have the potential to i) increase the availability, accessibility, acceptability, and quality of health services as we know them; ii) change nature and direction of health care, and the possibility of making it more preventive, personalised, and mobile through the use of such technologies; and iii) enfranchise patients and communities (and particularly vulnerable groups including children and young people) and evolve their relationship with health professionals and providers, thus helping shape the health system according to the needs of the patients and communities [@kickbusch2021lancet].
 
 Yet, to date the global digital health ecosystem is still project-centric, resulting in data fragmentation and technology lock-in, compromising health care delivery [@mehl2023fullstac]. There is no dearth of the number of digital health interventions: sub-Saharan Africa has seen over 700 such projects in the past 10 years. There is, however, a fundamental lack in coordination, integration, scalability, sustainability, and equitable distribution of investments in digital health. Health policymakers and the global health community at large need to urgently institute coordination mechanisms to terminate unending duplication and disjointed vertical implementations and manage solutions for scale [@karamagi2022ehealth].
 
-In this context it is essential to have a good understanding of digital platforms and their associated ecosystem as an essential enabling socio-technical infrastructure upon  which digital health interventions can be realized in a more standardized, scaleable and sustainable fashion. Digital platforms are a challenging research object because of their distributed nature and intertwinement with institutions, markets and technologies [@dereuver2018digital]. Digital platform ecosystems vary according to three core building blocks: (1) platform ownership, (2) value-creating mechanisms, and (3) complementor autonomy [@hein2020digital]. Digital platforms have disrupted many sectors but have just started to make inroads into highly regulated industries such as healthcare [@ozalp2022digital].
+To achieve scaleability of digital health interventions, we need to conceptualize and implement digital platforms and their associated ecosystems that constitute an important enabling socio-technical infrastructure upon which such interventions can be realized in a more standardized and sustainable fashion. Digital platforms are a challenging research object because of their distributed nature and intertwinement with institutions, markets and technologies [@dereuver2018digital]. Digital platform ecosystems vary according to three core building blocks: (1) platform ownership, (2) value-creating mechanisms, and (3) complementor autonomy [@hein2020digital]. Various studies have investigated why the healthcare domain has been slow in adopting platforms and their ecosystems [@hermes2020digital;@ozalp2022digital]. We highlight three paradigmatic issues that are relevant to the work presented in this paper.
+
+### From centralized to decentralized platforms
+
+Digital platforms have predominantly flourished in a business setting, as is exemplified by the well known success stories of cloud platforms providers (AWS, Microsoft, Google, Alibaba), two-sided market platforms (Airbnb, Spotify, Uber) and social media platforms (Meta, WeChat). While these examples allude to the potentional to generate social and economic value by using platforms as a key enabler of digital transformation of healthcare in LMICs, it is less obvious in what ways a digital platform can trigger specific positive effects *for* development [@bonina2021digital]. Part of the problem in grasping the implications of platforms for development in the field of information systems has been the lack of clarity regarding the understanding of what digital platforms are, what their main features are and how they generate value [@dereuver2018digital]. Notably, even valuable landscape papers in information systems largely ignore the development implications of digital platforms [@dereuver2018digital] or may summarize them in rather naïve ways [@bonina2021digital]. Put more strongly, issues pertaining to the winner-takes-all nature of digital platforms have resulted in so-called transgression of spheres where commercial platform operators acquire disproprotionately large market power which is at odds with realizing public value [@sharon2018when].
+
+It almost seems that we have forgotten that digital platforms need not always be centralized, but that we have a choice to implement decentralized or distributed platforms. In his seminal paper in 1963, Baran distinguished three types of network topologies ([@fig-network-topologies]). In a centralized network, all communication is facilitated through a single, central hub, which is obviously vulnerable as "...destruction of single node destroys communication between the end stations" [@baran1964distributed]. At the opposite end of the spectrum, in a fully distributed network stations are connected to all adjacent stations. In practice, a mixture of centralized and distributed components is used to form a so-called decentralized network. Complete reliance upon a single point is no longer required, while at the same time where is a hierarchy where smaller centralized networks are connected to higher-lying networks through interconnecting hubs (encircled in blue). Note that the internet has both the characteristics of a distributed network (for example, traffic and data processing are shared across multiple paths and servers) as well as that of a decentralized network (there is no single entity that controls the entire internet. Instead, numerous internet service providers (ISPs), organizations, and governments manage different parts of the network).
+
+![Three network topologies, taken from Baran (1964). The nodes encircled in blue in the decentralized network are hubs that provide connections between sub-networks.](images/network-topologies.png){#fig-network-topologies}
+
+We are inspired by various fields of study that have shown that decentralized and/or distributed systems are often 'resilient by design' [@fiksel2003designing;@liu2010architectural;@mayar2022resilience], for example, allowing efficient deployments at different geographic scales. Given the LMICs are resource-constrained, we consider downward scaleability as a key design criterium [@fayad2005scalable;@duboc2006framework].
+
+, one of the main drivers of the work presented here is to conceptualize and implement a platform that is conducive to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data]. With this approach, we purposefully challenge the dominant paradigm of designing and implementing centralized platforms to support the digital transformation of healthcare in LMICs  
+
+
+### From ... to ... (openness)
+
+### From digital platforms to data platforms
+
+This paper is motivated by the conflation of a number of developments relevant to the design and implementation of open, solidarity-based OHDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “data & analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms for primary data sharing (the original OpenHIE specification) to health data platforms for secondary data sharing. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
+
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for secondary data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish OHDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open OHDP can be realized that supports the following different types of data sharing.
+
+#### 1. Sharing of data sets at the most granular (patient) level, persisted as longitudinal records
+The Shared Health Record (SHR) in OpenHIE provides an operational, real-time transactional data source which is intended for primary data sharing. The specification explicitly states that the SHR is distinct from a datawarehouse. At the same time, the Health Management Information System (HMIS) component is specified to fulfil functional requirements that are typically provided by datawarehouses.
+
+- **Q1:** How can proven solution designs and modern technologies from data warehousing and engineering be integrated in the OpenHIE specification and how does this relate to the curren specifications of the SHR and HMIS.
+
+
+#### 2. Sharing of data products derived from the original data set
+OpenHIE specifies that the Health Management Information System (HMIS) component should support a workflow to validate and save aggregate data based on the emerging [IHE Aggregate Data Exchange (ADX) standard](https://www.ihe.net/uploadedFiles/Documents/QRPH/IHE_QRPH_Suppl_ADX.pdf). This is just one specific workflow within a larger data analytics value chain that covers i) collection, ii) standardization, iii) cleaning, iv) storage, v) analysis and vi) distribution [@curry2016big]. Sharing of benchmarking, and decision-support tools based on various statistical (machine learning) models that have been trained on data sets and/or data product, can be shared for standalone use.
+
+- **Q2:** How can proven solutions designs from the data warehousing and engineering community be included in OpenHIE to support sharing of wider variety of data products.
+
+#### 3. Sharing of secure computational environments to access and work with the data
+
+Current solution design of centralized data storage is increasingly being challenged. Recent work points to federated learning (FL) [@rieke2020future] and privacy- enhancing technologies (PETs) [@scheibner2021revolutionizing;@jordan2022selecting] as a better long-term solution to secure and equitable sharing of data. Given the resource constrained environments of LMICs, is is particularly challenging to devise a solution that is economically feasible and ... 
+
+### Design principles
+
+The work presented there:
+
+- inclusive-by-design, based on the notions of datasolidarity and maximising autonomy of participants in the ecosystem
+- scaleable by design, particularly focusing on downward scaleability to support a decentralized platform topology that supports a hierarchy of platforms of local care networks --> county-level networks --> national networks
+-  fits a socio-political context where counties are enabled to implement regional datwhich mirrors the administrative organizations of 
+
+
+## Points to ponder
+
+- Most succesful examples of digital platforms have a private keystone actor
+- 
 
 
 
