Publish full rewrite

--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -2506,7 +2506,42 @@
   file = {/Users/dkapitan/Zotero/storage/3R555RJ2/Lee - 2024 - Behind and beyond the standard(ization) trap diversifying power sources by differentiating centrali.pdf}
 }
 
-@article{ogundaini2022systematica,
+@article{schultes2023fair,
+  title = {The {{FAIR}} Hourglass: {{A}} Framework for {{FAIR}} Implementation},
+  shorttitle = {The {{FAIR}} Hourglass},
+  author = {Schultes, Erik},
+  editor = {Magagna, Barbara},
+  year = {2023},
+  month = jan,
+  journal = {FAIR Connect},
+  volume = {1},
+  number = {1},
+  pages = {13--17},
+  issn = {2949799X},
+  doi = {10.3233/FC-221514},
+  urldate = {2023-04-04},
+  abstract = {The FAIR Hourglass provides a framework to organize two general phases of FAIR implementation: FAIRification (top) and FAIR Orchestration (bottom). The center of the hourglass represents the use of widely agreed-upon open, minimal standards ensuring machine-actionability.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/C79VBWCR/Schultes - 2023 - The FAIR hourglass A framework for FAIR implement.pdf}
+}
+
+@article{beck2019hourglass,
+  title = {On the Hourglass Model},
+  author = {Beck, Micah},
+  year = {2019},
+  month = jun,
+  journal = {Communications of the ACM},
+  volume = {62},
+  number = {7},
+  pages = {48--57},
+  issn = {0001-0782, 1557-7317},
+  doi = {10.1145/3274770},
+  abstract = {Used in the design of the Internet and Unix, the layered services of the hourglass model have enabled viral adoption and deployment scalability.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/NKGQZL5V/Beck - 2019 - On the hourglass model.pdf}
+}
+
+@article{ogundaini2022systematic,
   title = {Systematic Review: {{Decentralised}} Health Information Systems Implementation in Sub-{{Saharan Africa}}},
   shorttitle = {Systematic Review},
   author = {Ogundaini, Oluwamayowa O. and Achieng, Mourine S.},
@@ -2515,11 +2550,10 @@
   volume = {18},
   number = {1},
   pages = {1--10},
-  publisher = {Authors},
   issn = {2415-2005},
   doi = {10.4102/td.v18i1.1216},
   urldate = {2024-08-12},
-  file = {/Users/dkapitan/Zotero/storage/SF872HD6/Ogundaini and Achieng - 2022 - Systematic review Decentralised health information systems implementation in sub-Saharan Africa.pdf}
+  file = {/Users/dkapitan/Zotero/storage/9TTGHB3P/Ogundaini and Achieng - 2022 - Systematic review Decentralised health informatio.pdf}
 }
 
 @article{panda2016decentralization,
@@ -2884,4 +2918,39 @@
   urldate = {2024-08-13},
   abstract = {Pursuit of sustainable development requires a systems approach to the design of industrial product and service systems. Although many business enterprises have adopted sustainability goals, the actual development of sustainable systems remains challenging because of the broad range of economic, environmental and social factors that need to be considered across the system life cycle. Traditional systems engineering practices try to anticipate and resist disruptions but may be vulnerable to unforeseen factors. An alternative is to design systems with inherent ``resilience'' by taking advantage of fundamental properties such as diversity, efficiency, adaptability, and cohesion. Previous work on sustainable design has focused largely upon ecological efficiency improvements. For example, companies have found that reducing material and energy intensity and converting wastes into valuable secondary products creates value for shareholders as well as for society at large. To encourage broader systems thinking, a design protocol is presented that involves the following steps:\, identifying system function and boundaries, establishing requirements, selecting appropriate technologies, developing a system design, evaluating anticipated performance, and devising a practical means for system deployment. The approach encourages explicit consideration of resilience in both engineered systems and the larger systems in which they are embedded.},
   file = {/Users/dkapitan/Zotero/storage/6UYW9XX4/Fiksel - 2003 - Designing Resilient, Sustainable Systems.pdf}
+}
+
+@article{karume2012trends,
+  title = {Trends in {{Adoption}} of {{Open Source Software}} in {{Africa}}},
+  author = {Karume, Simon and Mbugua, Samuel},
+  year = {2012},
+  month = nov,
+  journal = {Computing Trendz - The Journal of Emerging Trends in Information Technology},
+  volume = {3},
+  pages = {1509--1515},
+  abstract = {In the context of limited financial resources and capacities, Africa can examine how to better use the opportunities presented by the emergence of free and open source software (FOSS) to leapfrog into the information age and bridge the digital divide through reduced costs and less dependency on imported technology. This paper examines the adoption trends of open source software in Africa and seeks to establish the current global placing of the continent in adoption and use of FOSS. To get a better view of the current FOSS situation in Africa, the study explores the penetration of FOSS into Africa software market and how various Governments react to the use of FOSS. Through scrutiny of literature on adoption and use of open source software in Africa as well as previous and emerging initiatives to promote the use of open source software in the region, the paper presents preliminary findings of the trends observed. Further using the data gathered the paper attempts to forecast the future of FOSS in Africa and the probable implications on the development agenda of the continent.},
+  file = {/Users/dkapitan/Zotero/storage/GLLB663X/Karume and Mbugua - 2012 - Trends in Adoption of Open Source Software in Afri.pdf}
+}
+
+@article{gillwaldfinal,
+  title = {Final Report Prepared By:},
+  author = {Gillwald, Alison and Johnson, David and Cloete, Laurens and Hadzic, Senka and Kiden, Sarah and Rens, Andrew and Phokeer, Amreesh},
+  abstract = {This study analyses the progress, challenges and opportunities of open-source digital infrastructure in Africa. The African continent has seen some rapid progress over the past two decades in areas such as mobile connectivity, electrification and availability of internet-capable devices such as smartphones. However, despite this progress, many African countries remain poor, are vulnerable to shocks such as natural disasters and pandemics, and face various development challenges. As the world becomes more digital, Africa's development is increasingly determined by its digital capability. Open-source digital infrastructure is a key component of the required digital capability. The optimal application of digital infrastructure to development in Africa requires active participation in the creation and maintenance of open-source digital infrastructure contribution, in a manner similar to which research and development enables adoption of technology produced elsewhere through increased absorptive capacity.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/LRHT834N/Gillwald et al. - Final report prepared by.pdf}
+}
+
+@article{shabani2022will,
+  title = {Will the {{European Health Data Space}} Change Data Sharing Rules?},
+  author = {Shabani, Mahsa},
+  year = {2022},
+  month = mar,
+  journal = {Science},
+  volume = {375},
+  number = {6587},
+  pages = {1357--1359},
+  publisher = {American Association for the Advancement of Science},
+  doi = {10.1126/science.abn4874},
+  urldate = {2024-08-13},
+  file = {/Users/dkapitan/Zotero/storage/4N83FKMU/Shabani - 2022 - Will the European Health Data Space change data sh.pdf}
 }
